removed second dataset

--- a/QA_Multi_Demo.ipynb
+++ b/QA_Multi_Demo.ipynb
@@ -20,52 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9adeb31a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wed Aug 10 15:39:46 2022       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 512.36       Driver Version: 512.36       CUDA Version: 11.6     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name            TCC/WDDM | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  Quadro RTX 5000... WDDM  | 00000000:01:00.0  On |                  N/A |\n",
-      "| N/A   53C    P8     9W /  N/A |   3282MiB / 16384MiB |      3%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|    0   N/A  N/A      6140    C+G   ...t\\Teams\\current\\Teams.exe    N/A      |\n",
-      "|    0   N/A  N/A     12500      C   ...ython\\Python39\\python.exe    N/A      |\n",
-      "|    0   N/A  N/A     13432    C+G   ...cw5n1h2txyewy\\LockApp.exe    N/A      |\n",
-      "|    0   N/A  N/A     16080    C+G   ...urrent\\LogiOptionsMgr.exe    N/A      |\n",
-      "|    0   N/A  N/A     16108    C+G   ...e\\Current\\LogiOverlay.exe    N/A      |\n",
-      "|    0   N/A  N/A     16752    C+G   ...ontend\\Docker Desktop.exe    N/A      |\n",
-      "|    0   N/A  N/A     20172    C+G   ...8wekyb3d8bbwe\\Cortana.exe    N/A      |\n",
-      "|    0   N/A  N/A     20816    C+G   ...t\\Teams\\current\\Teams.exe    N/A      |\n",
-      "|    0   N/A  N/A     22288    C+G   ...icrosoft VS Code\\Code.exe    N/A      |\n",
-      "|    0   N/A  N/A     24732    C+G   ...2txyewy\\TextInputHost.exe    N/A      |\n",
-      "|    0   N/A  N/A     26308    C+G   ...\\atom\\app-1.58.0\\atom.exe    N/A      |\n",
-      "+-----------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make sure you have a GPU running\n",
-    "!nvidia-smi"
+    "!nvidia-smi #for windows"
    ]
   },
   {
@@ -120,7 +83,7 @@
    "outputs": [],
    "source": [
     "document_store = InMemoryDocumentStore() \n",
-    "#you cam also use a faiss document store which is optimised vector storage for DPR, for simplicity sake we will use InMemory"
+    "#you can also use a faiss document store which is optimised vector storage for DPR, for simplicity sake we will use InMemory"
    ]
   },
   {
@@ -523,175 +486,13 @@
     "prediction_df = print_preds_df(prediction)\n",
     "prediction_df #shows the top 5 answers by score "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1dc2d3ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00,  2.30 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 52.54 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 33.33 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 47.62 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 47.62 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 58.83 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 58.83 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 58.83 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 61.33 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 40.00 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 55.56 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 43.48 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 66.67 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 45.39 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 29.44 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 57.70 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 66.67 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 65.94 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 62.50 Batches/s]\n",
-      "Inferencing Samples: 100%|█████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 66.05 Batches/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>answer</th>\n",
-       "      <th>context</th>\n",
-       "      <th>score</th>\n",
-       "      <th>link</th>\n",
-       "      <th>source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>safe return of 962 Californians from the Grand Princess cruise ship</td>\n",
-       "      <td>with the federal government to aid in the safe return of 962 Californians fr...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#</td>\n",
-       "      <td>California Department of Public Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>unwashed hands</td>\n",
-       "      <td>act with sick people. Avoid touching your eyes, nose, or mouth with unwashed...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.cdc.gov/coronavirus/2019-ncov/travelers/faqs.html</td>\n",
-       "      <td>Center for Disease Control and Prevention (CDC)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>COVID-19</td>\n",
-       "      <td>) is encouraging individuals who are unable to work due to exposure to COVID...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#</td>\n",
-       "      <td>California Department of Public Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>our Medical and Health Coordination Center has been activated and is coordin...</td>\n",
-       "      <td>our Medical and Health Coordination Center has been activated and is coordin...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#</td>\n",
-       "      <td>California Department of Public Health</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>slow the spread of the virus</td>\n",
-       "      <td>state directed mass gatherings be postponed or cancelled to slow the spread...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#</td>\n",
-       "      <td>California Department of Public Health</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                            answer  \\\n",
-       "0              safe return of 962 Californians from the Grand Princess cruise ship   \n",
-       "1                                                                   unwashed hands   \n",
-       "2                                                                         COVID-19   \n",
-       "3  our Medical and Health Coordination Center has been activated and is coordin...   \n",
-       "4                                                     slow the spread of the virus   \n",
-       "\n",
-       "                                                                           context  \\\n",
-       "0  with the federal government to aid in the safe return of 962 Californians fr...   \n",
-       "1  act with sick people. Avoid touching your eyes, nose, or mouth with unwashed...   \n",
-       "2  ) is encouraging individuals who are unable to work due to exposure to COVID...   \n",
-       "3  our Medical and Health Coordination Center has been activated and is coordin...   \n",
-       "4   state directed mass gatherings be postponed or cancelled to slow the spread...   \n",
-       "\n",
-       "   score  \\\n",
-       "0    0.0   \n",
-       "1    0.0   \n",
-       "2    0.0   \n",
-       "3    0.0   \n",
-       "4    0.0   \n",
-       "\n",
-       "                                                                          link  \\\n",
-       "0  https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#   \n",
-       "1                https://www.cdc.gov/coronavirus/2019-ncov/travelers/faqs.html   \n",
-       "2  https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#   \n",
-       "3  https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#   \n",
-       "4  https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/nCoV2019.aspx#   \n",
-       "\n",
-       "                                            source  \n",
-       "0           California Department of Public Health  \n",
-       "1  Center for Disease Control and Prevention (CDC)  \n",
-       "2           California Department of Public Health  \n",
-       "3           California Department of Public Health  \n",
-       "4           California Department of Public Health  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qn = \"What happened on Halloween at Marina Bay Sands?\"\n",
-    "prediction = pipeline.run(query=qn, params={'Retriever': {'top_k': 20}, 'Reader': {'top_k':5}})\n",
-    "prediction_df = print_preds_df(prediction)\n",
-    "prediction_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8aa1eed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "testvenv",
+   "display_name": "Python 3.9.5 ('testvenv': venv)",
    "language": "python",
-   "name": "testvenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -704,6 +505,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6ae9c111b34fa2e30ace2c16e524dd84b3f0c1b33f3eeae7e190ba6ff380807a"
+   }
   }
  },
  "nbformat": 4,
